--- a/mypy.ini
+++ b/mypy.ini
@@ -1,9 +1,14 @@
 [mypy]
 strict_equality = True
-plugins = sqlmypy
+# I don't think this is any use as long as we're not using the ORM
+#plugins = sqlmypy
+# This one is the official mypy + sqlalchemy 1.4
+plugins = sqlalchemy.ext.mypy.plugin
 [mypy-gemmi]
 ignore_missing_imports = True
 [mypy-metadata_client]
+ignore_missing_imports = True
+[mypy-psutil]
 ignore_missing_imports = True
 # see https://github.com/sqlalchemy/alembic/issues/745
 [mypy-alembic]
