--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,31 @@
 alembic==1.5.8
--e git+git@gitlab.desy.de:cfel-sc/amarcord-parent/amarcord-xfel.git@31e6af8916d4cec0d43610fa67f977855d0d66e5#egg=amarcord
+-e git+git@gitlab.desy.de:cfel-sc/amarcord-parent/amarcord-xfel.git@aca48a5c4b88f2fc96b03ab593f6e71ffadf2562#egg=amarcord
+amqp==5.0.6
 appdirs==1.4.4
+argcomplete==1.12.3
 astroid==2.5.7
 atlassian-python-api==3.9.1
+bagit==1.8.1
 bcrypt==3.2.0
 beautifulsoup4==4.9.3
+billiard==3.6.4.0
 black==20.8b1
+CacheControl==0.11.7
+celery==5.1.0
+celery-types==0.3.0
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
 click==7.1.2
+click-didyoumean==0.0.3
+click-plugins==1.1.1
+click-repl==0.2.0
+coloredlogs==15.0
 cryptography==3.4.7
+cwlref-runner==1.0
+cwltool==3.1.20210521105815
 cycler==0.10.0
+decorator==4.4.2
 Deprecated==1.2.12
 dhall==0.1.7
 EXtra-data==1.5.0
@@ -20,8 +34,10 @@ Flask==2.0.1
 Flask-Cors==3.0.10
 Flask-HTTPAuth==4.2.0
 gprof2dot==2021.2.21
+greenlet==1.1.0
 gunicorn==20.1.0
 h5py==3.2.1
+humanfriendly==9.1
 humanize==3.2.0
 idna==2.10
 imageio==2.9.0
@@ -31,18 +47,22 @@ itsdangerous==2.0.1
 Jinja2==3.0.1
 karabo-bridge==0.6.0
 kiwisolver==1.3.1
+kombu==5.1.0
 lark-parser==0.11.2
 lazy-object-proxy==1.6.0
+lockfile==0.12.2
 lxml==4.6.3
 Mako==1.1.4
 MarkupSafe==2.0.1
 matplotlib==3.3.4
 mccabe==0.6.1
+mistune==0.8.4
 msgpack==1.0.2
 msgpack-numpy==0.4.7.1
 msgpack-types==0.1.0
-mypy==0.812
+mypy==0.902
 mypy-extensions==0.4.3
+networkx==2.5.1
 numpy==1.19.5
 oauthlib==3.1.0
 packaging==20.9
@@ -50,9 +70,12 @@ pandas==1.2.3
 pathspec==0.8.1
 Pillow==8.2.0
 Pint==0.16.1
+prompt-toolkit==3.0.18
+prov==1.5.1
 psutil==5.8.0
 PubChemPy==1.0.4
 pycparser==2.20
+pydot==1.4.2
 pyfakefs==4.4.0
 pylint==2.8.2
 PyMySQL==1.0.2
@@ -67,10 +90,16 @@ python-editor==1.0.4
 pytz==2021.1
 PyYAML==5.4.1
 pyzmq==22.0.3
+rdflib==5.0.0
+rdflib-jsonld==0.5.0
+redis==3.5.3
 regex==2021.4.4
 requests==2.25.1
 requests-oauthlib==1.3.0
+ruamel.yaml==0.16.5
 Rx==3.2.0
+schema-salad==7.1.20210518142926
+shellescape==3.4.1
 six==1.15.0
 soupsieve==2.2.1
 SQLAlchemy==1.4.18
@@ -78,9 +107,18 @@ sqlalchemy-stubs==0.4
 toml==0.10.2
 typed-argument-parser==1.6.2
 typed-ast==1.4.3
+types-click==7.1.1
+types-cryptography==3.3.2
+types-enum34==0.1.5
+types-ipaddress==0.1.2
+types-pkg-resources==0.1.2
+types-PyYAML==5.4.1
+types-six==0.1.6
 typing-extensions==3.7.4.3
 typing-inspect==0.6.0
 urllib3==1.26.4
+vine==5.0.0
+wcwidth==0.2.5
 Werkzeug==2.0.1
 wrapt==1.12.1
 xarray==0.17.0
