--- a/mypy.ini
+++ b/mypy.ini
@@ -1,6 +1,8 @@
 [mypy]
 strict_equality = True
 plugins = sqlmypy
+[mypy-gemmi]
+ignore_missing_imports = True
 [mypy-metadata_client]
 ignore_missing_imports = True
 # see https://github.com/sqlalchemy/alembic/issues/745
