Workflows: Readme and cosmetics

--- a/.coveragerc
+++ b/.coveragerc
@@ -1,5 +1,7 @@
 # Syntax described here: https://coverage.readthedocs.io/en/latest/source.html#source
 [run]
+# The stuff here is exclusively GUI stuff that we cannot test adequately.
+# pytest-qt isn't powerful enough.
 omit =
      amarcord/modules/spb/*
      amarcord/modules/qt/*
@@ -10,4 +12,3 @@ omit =
      amarcord/modules/event_log_daemon.py
      amarcord/modules/password_check_dialog.py
      amarcord/modules/uicontext.py
-     
