--- a/alembic-p11.ini
+++ b/alembic-p11.ini
@@ -2,7 +2,7 @@
 
 [alembic]
 # path to migration scripts
-script_location = amarcord:amici/p11/migrations
+script_location = amarcord:newdb/migrations
 
 # template used to generate migration files
 # file_template = %%(rev)s_%%(slug)s
