Workflows: support more of SARS-CoV campaign and migrations

--- a/alembic-p11.ini
+++ b/alembic-p11.ini
@@ -36,7 +36,7 @@ script_location = amarcord:newdb/migrations
 # output_encoding = utf-8
 
 #sqlalchemy.url = sqlite:////tmp/migration-db.sqlite
-sqlalchemy.url = mysql+pymysql://root:root@localhost/hostal
+sqlalchemy.url = mysql+pymysql://root:root@localhost/SARS_COV_2_v2
 
 
 [post_write_hooks]
