P11: improvements to ingester

--- a/mypy.ini
+++ b/mypy.ini
@@ -6,6 +6,8 @@ strict_equality = True
 plugins = sqlalchemy.ext.mypy.plugin
 [mypy-gemmi]
 ignore_missing_imports = True
+[mypy-tqdm]
+ignore_missing_imports = True
 [mypy-metadata_client]
 ignore_missing_imports = True
 [mypy-psutil]
