--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ types-PyYAML = '^5.4'
 [tool.poetry.scripts]
 amarcord-daemon = "amarcord.cli.daemon:main"
 amarcord-db-cli = "amarcord.cli.admin:main"
+amarcord-gui = "amarcord.cli.gui:main"
 amarcord-database-fuzzer = "amarcord.cli.database_fuzzer:main"
 amarcord-xfel-filesystem-ingester = "amarcord.cli.xfel_filesystem_ingester:main"
 amarcord-karabo-online-ingester = "amarcord.cli.karabo_online_ingester:main"
