--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,7 @@ pylint-and-mypy:
   stage: test
   script:
     - poetry install
-    - poetry run mypy amarcord tutorial
+    - poetry run mypy amarcord
     - apt-get update -y && apt-get install -y qtbase5-dev
     - poetry run pylint amarcord
 
