--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,6 +57,7 @@ msgpack-types = "^0.1"
 EXtra-data = "^1.5"
 # for SLURM REST
 requests = "^2.26.0"
+kamzik3 = "^0.7.7"
 
 [tool.poetry.dev-dependencies]
 black = '21.9b0'
@@ -76,6 +77,7 @@ types-PyYAML = '^5.4'
 amarcord-daemon = "amarcord.cli.daemon:main"
 amarcord-db-cli = "amarcord.cli.admin:main"
 amarcord-gui = "amarcord.cli.gui:main"
+amarcord-kamzik-client = "amarcord.cli.kamzik_client:main"
 amarcord-database-fuzzer = "amarcord.cli.database_fuzzer:main"
 amarcord-xfel-filesystem-ingester = "amarcord.cli.xfel_filesystem_ingester:main"
 amarcord-karabo-online-ingester = "amarcord.cli.karabo_online_ingester:main"
