--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ astroid==2.7.3; python_version >= "3.6" and python_version < "4.0"
 atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.4.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6")
 attrs==21.2.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 bcrypt==3.2.0; python_version >= "3.6"
+bidict==0.21.4; python_version >= "3.7"
 black==21.9b0; python_full_version >= "3.6.2"
 certifi==2021.10.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
 cffi==1.15.0; implementation_name == "pypy" and python_version >= "3.6"
@@ -24,6 +25,7 @@ importlib-resources==5.4.0; python_version < "3.9" and python_version >= "3.6"
 iniconfig==1.1.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 isodate==0.6.0
 isort==5.10.1; python_full_version >= "3.6.1" and python_version < "4.0" and python_version >= "3.6"
+kamzik3==0.7.7; python_version >= "3.7"
 karabo-bridge==0.6.1
 kiwisolver==1.3.2; python_version >= "3.7"
 lark-parser==0.11.3
@@ -37,14 +39,18 @@ msgpack-types==0.1.0; python_version >= "3.7" and python_version < "4.0"
 msgpack==1.0.2
 mypy-extensions==0.4.3; python_version >= "3.5" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.6.2"
 mypy==0.910; python_version >= "3.5"
+natsort==8.0.0; python_version >= "3.7"
+numexpr==2.7.3; python_version >= "3.7"
 numpy==1.21.4; python_version >= "3.7" and python_version < "3.11"
+oyaml==1.0; python_version >= "3.7"
 packaging==21.3; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 pandas==1.3.4; python_full_version >= "3.7.1"
 pathspec==0.9.0; python_full_version >= "3.6.2"
-pillow==8.4.0; python_version >= "3.7"
+pillow==8.4.0; python_version >= "3.7" and python_version < "4"
 pint==0.16.1; python_version >= "3.6"
 platformdirs==2.4.0; python_version >= "3.6" and python_full_version >= "3.6.2" and python_version < "4.0"
 pluggy==1.0.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+psutil==5.8.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
 pubchempy==1.0.4
 py==1.11.0; python_version >= "3.6" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.6" and python_full_version >= "3.5.0"
 pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
@@ -53,10 +59,12 @@ pyfakefs==4.5.3; python_version >= "3.6"
 pylint==2.10.2; python_version >= "3.6" and python_version < "4.0"
 pymysql==1.0.2; python_version >= "3.6"
 pyparsing==3.0.6; python_version >= "3.7"
-pyqt5-qt5==5.15.2; python_version >= "3.6"
-pyqt5-sip==12.9.0; python_version >= "3.6"
+pyqt5-qt5==5.15.2; python_version >= "3.7"
+pyqt5-sip==12.9.0; python_version >= "3.7"
 pyqt5-stubs==5.15.2.0; python_version >= "3.5"
 pyqt5==5.15.6; python_version >= "3.6"
+pyqtgraph==0.12.3; python_version >= "3.7"
+pyserial==3.5; python_version >= "3.7"
 pytest-cov==2.12.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 pytest-qt==4.0.2; python_version >= "3.6"
 pytest==6.2.5; python_version >= "3.6"
@@ -65,12 +73,14 @@ pytz==2021.3; python_full_version >= "3.7.1" and python_version >= "3.6"
 pyyaml==5.4.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 pyzmq==22.3.0; python_version >= "3.6"
 regex==2021.11.10; python_full_version >= "3.6.2"
+reportlab==3.6.2; python_version >= "3.7" and python_version < "4"
 requests==2.26.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 setuptools-scm==6.3.2; python_version >= "3.7"
 six==1.16.0; python_full_version >= "3.7.1" and python_version >= "3.6"
 sortedcontainers==2.4.0; python_version >= "3.6"
 sqlalchemy2-stubs==0.0.2a19; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
 sqlalchemy==1.4.27; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
+tables==3.6.1; python_version >= "3.7"
 toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_version < "4.0" or python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.5.0" and python_version < "4.0"
 tomli==1.2.2; python_version >= "3.7" and python_full_version >= "3.6.2"
 typed-argument-parser==1.7.1
