--- a/pyproject.toml
+++ b/pyproject.toml
@@ -77,7 +77,7 @@ types-PyYAML = '^5.4'
 amarcord-daemon = "amarcord.cli.daemon:main"
 amarcord-db-cli = "amarcord.cli.admin:main"
 amarcord-gui = "amarcord.cli.gui:main"
-amarcord-kamzik-client = "amarcord.cli.kamzik_client:main"
+amarcord-kamzik-daemon = "amarcord.cli.kamzik_daemon:main"
 amarcord-database-fuzzer = "amarcord.cli.database_fuzzer:main"
 amarcord-xfel-filesystem-ingester = "amarcord.cli.xfel_filesystem_ingester:main"
 amarcord-karabo-online-ingester = "amarcord.cli.karabo_online_ingester:main"
