--- a/pyproject.toml
+++ b/pyproject.toml
@@ -59,6 +59,10 @@ EXtra-data = "^1.5"
 requests = "^2.26.0"
 kamzik3 = "^0.7.7"
 
+# for correcting UTC timezone for dates
+python-dateutil = "^2.8.2"
+types-python-dateutil = "^2.8.3"
+
 [tool.poetry.dev-dependencies]
 black = '21.9b0'
 mypy = '0.910'
