--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,6 +62,7 @@ kamzik3 = "^0.7.7"
 # for correcting UTC timezone for dates
 python-dateutil = "^2.8.2"
 types-python-dateutil = "^2.8.3"
+tqdm = "^4.62.3"
 
 [tool.poetry.dev-dependencies]
 black = '21.9b0'
@@ -86,6 +87,7 @@ amarcord-database-fuzzer = "amarcord.cli.database_fuzzer:main"
 amarcord-xfel-filesystem-ingester = "amarcord.cli.xfel_filesystem_ingester:main"
 amarcord-karabo-online-ingester = "amarcord.cli.karabo_online_ingester:main"
 amarcord-karabo-bridge-dumper = "amarcord.cli.karabo_bridge_dumper:main"
+amarcord-analysis-daemon = "amarcord.cli.analysis_daemon:main"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
