--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ certifi==2021.10.8; python_version >= "2.7" and python_full_version < "3.0.0" or
 cffi==1.15.0; implementation_name == "pypy" and python_version >= "3.6"
 charset-normalizer==2.0.7; python_full_version >= "3.6.0" and python_version >= "3"
 click==8.0.3; python_version >= "3.6" and python_full_version >= "3.6.2"
-colorama==0.4.4; python_version >= "3.6" and python_version < "4.0" and sys_platform == "win32" and python_full_version >= "3.6.2" and platform_system == "Windows" and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") or sys_platform == "win32" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") and python_full_version >= "3.5.0")
+colorama==0.4.4; python_full_version >= "3.6.2" and platform_system == "Windows" and python_version >= "3.6" and python_version < "4.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") or sys_platform == "win32" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") and python_full_version >= "3.5.0")
 coverage==6.1.2; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 cryptography==3.4.8; python_version >= "3.6"
 cycler==0.11.0; python_version >= "3.7"
@@ -83,6 +83,7 @@ sqlalchemy==1.4.27; (python_version >= "2.7" and python_full_version < "3.0.0") 
 tables==3.6.1; python_version >= "3.7"
 toml==0.10.2; python_version >= "3.6" and python_full_version < "3.0.0" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_version < "4.0" or python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.5.0" and python_version < "4.0"
 tomli==1.2.2; python_version >= "3.7" and python_full_version >= "3.6.2"
+tqdm==4.62.3; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
 typed-argument-parser==1.7.1
 types-python-dateutil==2.8.3
 types-pyyaml==5.4.12
