--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,75 +8,79 @@ license = "GPL-3.0-or-later"
 [tool.poetry.dependencies]
 python = ">=3.8, <3.10"
 # for general DB access
-SQLAlchemy = { version = "^1.4", extras = ["mypy"] }
+SQLAlchemy = { version = "1.4.27", extras = ["mypy", "asyncio"] }
 # for mysql
-pymysql = '^1.0'
+pymysql = '1.0.2'
 # for caching_sha2_password access in MySQL
-cryptography = '^3.4'
+cryptography = '3.4.8'
 # for migrating a DB
-alembic = '^1.5'
+alembic = '1.7.5'
 # for attributi: parsing/printing a delta
-isodate = '^0.6'
+isodate = '0.6.0'
 # for verifying passwords in the DB
-bcrypt = '^3.2'
+bcrypt = '3.2.0'
 # to pretty-print attributi (yeah, it's a bit overkill)
-lark-parser = '^0.11'
+lark-parser = '0.11.3'
 # for the config file
-PyYAML = '^5.4'
+PyYAML = '5.4.1'
 # for accessing XDG_CONFIG_HOME in the config file for example
-xdg = '^5.0'
+xdg = '5.1.1'
 # For parsing the arguments for programs (always required basically)
-typed-argument-parser = '^1.6'
+typed-argument-parser = '1.7.2'
 # For the config file
-pydantic = '^1.8'
+pydantic = '1.8.2'
 # numpy for Karabo statistics
-numpy = { version = '^1.19' }
+numpy = { version = '1.21.4' }
 # for the GUI
-PyQt5 = '^5.15'
+PyQt5 = '5.15.0'
 # for the GUI  types
-PyQt5-stubs = '^5.15'
+PyQt5-stubs = '5.15.2.0'
 # for zmq access in the daemon
-pyzmq = '^22.0'
+pyzmq = '22.3.0'
 # for plotting
-pandas = '^1.2'
+pandas = '1.3.4'
 # for validating pubchemids
-PubChemPy = '^1.0'
+PubChemPy = '1.0.4'
 # For printing "x second(s) ago" in the comments
-humanize = '^3.2'
+humanize = '3.12.0'
 # Also for the plots
-matplotlib = '^3.3'
+matplotlib = '3.5.0'
 # For validating units
-pint = '^0.16'
+pint = '0.16.1'
 # for the daemon
-karabo-bridge = "^0.6"
+karabo-bridge = "0.6.1"
 # for the daemon
-msgpack = "^1.0"
+msgpack = "1.0.2"
 # for the daemon
-msgpack-types = "^0.1"
+msgpack-types = "0.1.0"
 # for offline ingest
-EXtra-data = "^1.5"
+EXtra-data = "1.8.1"
 # for SLURM REST
-requests = "^2.26.0"
-kamzik3 = "^0.7.7"
+requests = "2.26.0"
+kamzik3 = "0.7.7"
 
 # for correcting UTC timezone for dates
-python-dateutil = "^2.8.2"
-types-python-dateutil = "^2.8.3"
-tqdm = "^4.62.3"
+python-dateutil = "2.8.2"
+types-python-dateutil = "2.8.3"
+tqdm = "4.62.3"
+# for the webserver
+quart = "0.16.2"
+# for the webserver
+Quart-CORS = "0.5.0"
 
 [tool.poetry.dev-dependencies]
 black = '21.9b0'
-mypy = '0.910'
-pylint = '2.10.2'
-pyfakefs = '^4.4.*'
-pytest = '^6.2'
-hypothesis = '^6.3'
-pytest-cov = '^2.11'
-pytest-qt = "^4.0.2"
+mypy = '0.930'
+pylint = '2.12.2'
+pyfakefs = '4.5.3'
+pytest = '6.2.5'
+hypothesis = '6.27.1'
+pytest-cov = '2.12.1'
+pytest-qt = "4.0.2"
 # slurm
-types-requests = "^2.26.0"
+types-requests = "2.26.0"
 # config file
-types-PyYAML = '^5.4'
+types-PyYAML = '5.4.12'
 
 [tool.poetry.scripts]
 amarcord-daemon = "amarcord.cli.daemon:main"
