--- a/pyproject.toml
+++ b/pyproject.toml
@@ -67,6 +67,8 @@ tqdm = "4.62.3"
 quart = "0.16.2"
 # for the webserver
 Quart-CORS = "0.5.0"
+aiosqlite = "^0.17.0"
+asyncmy = "^0.2.3"
 
 [tool.poetry.dev-dependencies]
 black = '21.9b0'
