--- a/pyproject.toml
+++ b/pyproject.toml
@@ -66,6 +66,8 @@ pytz = "2021.3"
 types-pytz = "2021.3.4"
 # to test incoming files for their mime types
 python-magic = "0.4.24"
+# to parse/coparse toml files for xwiz
+toml = "0.10.2"
 
 [tool.poetry.dev-dependencies]
 black = '21.9b0'
