--- a/pyproject.toml
+++ b/pyproject.toml
@@ -85,6 +85,7 @@ pytest-asyncio = "0.17.2"
 
 [tool.poetry.scripts]
 amarcord-daemon = "amarcord.cli.daemon:main"
+amarcord-cfel-analysis-daemon = "amarcord.cli.cfel_analysis_daemon:main"
 amarcord-webserver = "amarcord.cli.webserver:main"
 amarcord-kamzik-daemon = "amarcord.cli.kamzik_daemon:main"
 amarcord-xfel-filesystem-ingester = "amarcord.cli.xfel_filesystem_ingester:main"
