--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,7 +84,7 @@ types-PyYAML = '5.4.12'
 pytest-asyncio = "0.17.2"
 
 [tool.poetry.scripts]
-amarcord-daemon = "amarcord.cli.daemon:main"
+amarcord-karabo-bridge-daemon = "amarcord.cli.karabo_bridge_daemon:main"
 amarcord-cfel-analysis-daemon = "amarcord.cli.cfel_analysis_daemon:main"
 amarcord-webserver = "amarcord.cli.webserver:main"
 amarcord-kamzik-daemon = "amarcord.cli.kamzik_daemon:main"
