--- a/mypy.ini
+++ b/mypy.ini
@@ -6,6 +6,10 @@ strict_equality = True
 plugins = sqlalchemy.ext.mypy.plugin
 [mypy-gemmi]
 ignore_missing_imports = True
+[mypy-randomname]
+ignore_missing_imports = True
+[mypy-essential_generators]
+ignore_missing_imports = True
 [mypy-kamzik3.*]
 ignore_missing_imports = True
 [mypy-oyaml]
