--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,11 +12,13 @@ cffi==1.15.0; implementation_name == "pypy" and python_version >= "3.6"
 charset-normalizer==2.0.11; python_full_version >= "3.6.0" and python_version >= "3"
 click==8.0.3; python_version >= "3.7" and python_full_version >= "3.7.0"
 colorama==0.4.4; python_full_version >= "3.6.2" and platform_system == "Windows" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0") and (python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0") and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") or sys_platform == "win32" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") and python_full_version >= "3.5.0")
-coverage==6.3; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+coverage==6.3.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
 cryptography==3.4.8; python_version >= "3.6"
 cycler==0.11.0; python_version >= "3.7"
+essential-generators==1.0
 extra-data==1.8.1; python_version >= "3.6"
-fonttools==4.29.0; python_version >= "3.7"
+fire==0.4.0
+fonttools==4.29.1; python_version >= "3.7"
 greenlet==1.1.2; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.5.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
 h11==0.13.0; python_full_version >= "3.6.1" and python_version >= "3.7"
 h2==4.1.0; python_full_version >= "3.6.1" and python_version >= "3.7"
@@ -47,10 +49,10 @@ msgpack==1.0.2
 mypy-extensions==0.4.3; python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.6.2"
 mypy==0.930; python_version >= "3.6"
 numpy==1.21.4; python_version >= "3.7" and python_version < "3.11"
-packaging==21.3; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
+packaging==21.3; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.8"
 pandas==1.3.4; python_full_version >= "3.7.1"
 pathspec==0.9.0; python_full_version >= "3.6.2"
-pillow==9.0.0; python_version >= "3.7"
+pillow==9.0.1; python_version >= "3.7"
 pint==0.16.1; python_version >= "3.6"
 platformdirs==2.4.1; python_version >= "3.7" and python_full_version >= "3.6.2"
 pluggy==1.0.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
@@ -72,6 +74,7 @@ pyyaml==5.4.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (p
 pyzmq==22.3.0; python_version >= "3.6"
 quart-cors==0.5.0; python_full_version >= "3.7.0"
 quart==0.16.2; python_version >= "3.7"
+randomname==0.1.5
 regex==2022.1.18; python_full_version >= "3.6.2"
 requests==2.26.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 setuptools-scm==6.4.2; python_version >= "3.7"
@@ -79,6 +82,7 @@ six==1.16.0; python_full_version >= "3.7.1"
 sortedcontainers==2.4.0; python_version >= "3.6"
 sqlalchemy2-stubs==0.0.2a19; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
 sqlalchemy==1.4.31; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
+termcolor==1.1.0
 toml==0.10.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 tomli==1.2.3; python_version >= "3.7" and python_full_version >= "3.6.2" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0")
 tqdm==4.62.3; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.4.0")
@@ -93,6 +97,6 @@ urllib3==1.26.8; python_version >= "2.7" and python_full_version < "3.0.0" or py
 werkzeug==2.0.2; python_version >= "3.7" and python_full_version >= "3.7.0"
 wrapt==1.13.3; python_full_version >= "3.6.2"
 wsproto==1.0.0; python_full_version >= "3.6.1" and python_version >= "3.7"
-xarray==0.21.0; python_version >= "3.8"
+xarray==0.21.1; python_version >= "3.8"
 xdg==5.1.1; python_version >= "3.6" and python_version < "4.0"
 zipp==3.7.0; python_version < "3.9" and python_version >= "3.7"
