Improve test coverage, add sample IDs to AttributiMap

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,2 +1,7 @@
 [pytest]
 log_cli=true
+
+# With this in place, asynchronous tests are automatically detected and need to marker
+# see https://pypi.org/project/pytest-asyncio/
+# Default was "legacy", might still be.
+asyncio_mode = auto
