--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,7 @@ EXtra-data = "1.8.1"
 requests = "2.26.0"
 
 # disabled for now, it's a huge dependency
-# kamzik3 = "0.7.7"
+kamzik3 = "0.7.7"
 
 # for correcting UTC timezone for dates
 python-dateutil = "2.8.2"
