--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -5,7 +5,6 @@ astroid==2.9.3; python_full_version >= "3.6.2"
 asyncmy==0.2.3; python_version >= "3.7" and python_version < "4.0"
 atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.4.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6")
 attrs==21.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
-bidict==0.21.4; python_version >= "3.7"
 black==21.9b0; python_full_version >= "3.6.2"
 blinker==1.4; python_version >= "3.7" and python_full_version >= "3.7.0"
 certifi==2021.10.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
@@ -37,7 +36,6 @@ isodate==0.6.0
 isort==5.10.1; python_full_version >= "3.6.2" and python_version < "4.0"
 itsdangerous==2.0.1; python_version >= "3.7" and python_full_version >= "3.7.0"
 jinja2==3.0.3; python_version >= "3.7" and python_full_version >= "3.7.0"
-kamzik3==0.7.7; python_version >= "3.7"
 karabo-bridge==0.6.1
 kiwisolver==1.3.2; python_version >= "3.7"
 lazy-object-proxy==1.7.1; python_version >= "3.6" and python_full_version >= "3.6.2"
@@ -50,19 +48,15 @@ msgpack-types==0.1.0; python_version >= "3.7" and python_version < "4.0"
 msgpack==1.0.2
 mypy-extensions==0.4.3; python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.6.2"
 mypy==0.930; python_version >= "3.6"
-natsort==8.1.0; python_version >= "3.7"
-numexpr==2.8.1; python_version >= "3.7"
 numpy==1.21.4; python_version >= "3.7" and python_version < "3.11"
-oyaml==1.0; python_version >= "3.7"
 packaging==21.3; python_version >= "3.8" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.8"
 pandas==1.3.4; python_full_version >= "3.7.1"
 pathspec==0.9.0; python_full_version >= "3.6.2"
-pillow==9.0.1; python_version >= "3.7" and python_version < "4"
+pillow==9.0.1; python_version >= "3.7"
 pint==0.16.1; python_version >= "3.6"
-platformdirs==2.4.1; python_version >= "3.7" and python_full_version >= "3.6.2"
+platformdirs==2.5.0; python_version >= "3.7" and python_full_version >= "3.6.2"
 pluggy==1.0.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 priority==2.0.0; python_full_version >= "3.6.1" and python_version >= "3.7"
-psutil==5.9.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
 py==1.11.0; python_version >= "3.6" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.6" and python_full_version >= "3.5.0"
 pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pydantic==1.8.2; python_full_version >= "3.6.1"
@@ -70,11 +64,6 @@ pyfakefs==4.5.3; python_version >= "3.6"
 pylint==2.12.2; python_full_version >= "3.6.2"
 pymysql==1.0.2; python_version >= "3.6"
 pyparsing==3.0.7; python_version >= "3.7"
-pyqt5-qt5==5.15.2; python_version >= "3.7"
-pyqt5-sip==12.9.1; python_version >= "3.7"
-pyqt5==5.15.6; python_version >= "3.7"
-pyqtgraph==0.12.3; python_version >= "3.7"
-pyserial==3.5; python_version >= "3.7"
 pytest-asyncio==0.17.2; python_version >= "3.7"
 pytest-cov==2.12.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 pytest==6.2.5; python_version >= "3.6"
@@ -87,14 +76,12 @@ quart-cors==0.5.0; python_full_version >= "3.7.0"
 quart==0.16.2; python_version >= "3.7"
 randomname==0.1.5
 regex==2022.1.18; python_full_version >= "3.6.2"
-reportlab==3.6.6; python_version >= "3.7" and python_version < "4"
 requests==2.26.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 setuptools-scm==6.4.2; python_version >= "3.7"
 six==1.16.0; python_full_version >= "3.7.1"
 sortedcontainers==2.4.0; python_version >= "3.6"
 sqlalchemy2-stubs==0.0.2a19; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
 sqlalchemy==1.4.31; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
-tables==3.7.0; python_version >= "3.7"
 termcolor==1.1.0
 toml==0.10.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 tomli==1.2.3; python_version >= "3.7" and python_full_version >= "3.6.2" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0")
