--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,6 @@ aiofiles==0.8.0; python_version >= "3.7" and python_version < "4.0" and python_f
 aiosqlite==0.17.0; python_version >= "3.6"
 alembic==1.7.5; python_version >= "3.6"
 asyncmy==0.2.3; python_version >= "3.7" and python_version < "4.0"
-bidict==0.21.4; python_version >= "3.7"
 blinker==1.4; python_version >= "3.7" and python_full_version >= "3.7.0"
 certifi==2021.10.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
 cffi==1.15.0; implementation_name == "pypy" and python_version >= "3.6"
@@ -29,7 +28,6 @@ importlib-resources==5.4.0; python_version < "3.9" and python_version >= "3.6"
 isodate==0.6.0
 itsdangerous==2.0.1; python_version >= "3.7" and python_full_version >= "3.7.0"
 jinja2==3.0.3; python_version >= "3.7" and python_full_version >= "3.7.0"
-kamzik3==0.7.7; python_version >= "3.7"
 karabo-bridge==0.6.1
 kiwisolver==1.3.2; python_version >= "3.7"
 mako==1.1.6; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
@@ -40,26 +38,17 @@ msgpack-types==0.1.0; python_version >= "3.7" and python_version < "4.0"
 msgpack==1.0.2
 mypy-extensions==0.4.3; python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0")
 mypy==0.930; python_version >= "3.6"
-natsort==8.1.0; python_version >= "3.7"
-numexpr==2.8.1; python_version >= "3.7"
 numpy==1.21.4; python_version >= "3.7" and python_version < "3.11"
-oyaml==1.0; python_version >= "3.7"
 packaging==21.3; python_version >= "3.8"
 pandas==1.3.4; python_full_version >= "3.7.1"
-pillow==9.0.1; python_version >= "3.7" and python_version < "4"
+pillow==9.0.1; python_version >= "3.7"
 pint==0.16.1; python_version >= "3.6"
 priority==2.0.0; python_full_version >= "3.6.1" and python_version >= "3.7"
-psutil==5.9.0; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.7"
 py==1.11.0; python_version >= "3.6" and python_full_version < "3.0.0" and implementation_name == "pypy" or implementation_name == "pypy" and python_version >= "3.6" and python_full_version >= "3.5.0"
 pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pydantic==1.8.2; python_full_version >= "3.6.1"
 pymysql==1.0.2; python_version >= "3.6"
 pyparsing==3.0.7; python_version >= "3.7"
-pyqt5-qt5==5.15.2; python_version >= "3.7"
-pyqt5-sip==12.9.1; python_version >= "3.7"
-pyqt5==5.15.6; python_version >= "3.7"
-pyqtgraph==0.12.3; python_version >= "3.7"
-pyserial==3.5; python_version >= "3.7"
 python-dateutil==2.8.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 python-magic==0.4.24; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
 pytz==2021.3
@@ -68,13 +57,11 @@ pyzmq==22.3.0; python_version >= "3.6"
 quart-cors==0.5.0; python_full_version >= "3.7.0"
 quart==0.16.2; python_version >= "3.7"
 randomname==0.1.5
-reportlab==3.6.6; python_version >= "3.7" and python_version < "4"
 requests==2.26.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 setuptools-scm==6.4.2; python_version >= "3.7"
 six==1.16.0; python_full_version >= "3.7.1"
 sqlalchemy2-stubs==0.0.2a19; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6"
 sqlalchemy==1.4.31; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
-tables==3.7.0; python_version >= "3.7"
 termcolor==1.1.0
 toml==0.10.2; (python_version >= "2.6" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 tomli==1.2.3; python_version >= "3.7" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0")
