--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -1,15 +1,17 @@
 aiofiles==0.8.0; python_version >= "3.7" and python_version < "4.0" and python_full_version >= "3.7.0"
+aiohttp==3.8.1; python_version >= "3.6"
+aiosignal==1.2.0; python_version >= "3.6"
 aiosqlite==0.17.0; python_version >= "3.6"
 alembic==1.7.5; python_version >= "3.6"
 astroid==2.9.3; python_full_version >= "3.6.2"
+async-timeout==4.0.2; python_version >= "3.6"
 asyncmy==0.2.3; python_version >= "3.7" and python_version < "4.0"
 atomicwrites==1.4.0; python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.4.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6")
 attrs==21.4.0; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 black==21.9b0; python_full_version >= "3.6.2"
 blinker==1.4; python_version >= "3.7" and python_full_version >= "3.7.0"
-certifi==2021.10.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0"
 cffi==1.15.0; implementation_name == "pypy" and python_version >= "3.6"
-charset-normalizer==2.0.11; python_full_version >= "3.6.0" and python_version >= "3"
+charset-normalizer==2.0.12; python_full_version >= "3.5.0" and python_version >= "3.6"
 click==8.0.3; python_version >= "3.7" and python_full_version >= "3.7.0"
 colorama==0.4.4; python_full_version >= "3.6.2" and platform_system == "Windows" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" or sys_platform == "win32" and python_version >= "3.6" and python_full_version >= "3.5.0") and (python_version >= "3.7" and python_full_version < "3.0.0" and platform_system == "Windows" or platform_system == "Windows" and python_version >= "3.7" and python_full_version >= "3.5.0") and (python_version >= "3.6" and python_full_version < "3.0.0" and sys_platform == "win32" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") or sys_platform == "win32" and python_version >= "3.6" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6") and python_full_version >= "3.5.0")
 coverage==6.3.1; python_version >= "3.7" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.7"
@@ -19,6 +21,7 @@ essential-generators==1.0
 extra-data==1.8.1; python_version >= "3.6"
 fire==0.4.0
 fonttools==4.29.1; python_version >= "3.7"
+frozenlist==1.3.0; python_version >= "3.7"
 greenlet==1.1.2; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.5.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
 h11==0.13.0; python_full_version >= "3.6.1" and python_version >= "3.7"
 h2==4.1.0; python_full_version >= "3.6.1" and python_version >= "3.7"
@@ -28,8 +31,8 @@ humanize==3.12.0; python_version >= "3.6"
 hypercorn==0.13.2; python_version >= "3.7" and python_full_version >= "3.7.0"
 hyperframe==6.0.1; python_full_version >= "3.6.1" and python_version >= "3.7"
 hypothesis==6.27.1; python_version >= "3.6"
-idna==3.3; python_version >= "3.5" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.5"
-importlib-metadata==4.10.1; python_version < "3.9" and python_version >= "3.7"
+idna==3.3; python_version >= "3.6"
+importlib-metadata==4.11.1; python_version < "3.9" and python_version >= "3.7"
 importlib-resources==5.4.0; python_version < "3.9" and python_version >= "3.6"
 iniconfig==1.1.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 isodate==0.6.0
@@ -46,6 +49,7 @@ mccabe==0.6.1; python_full_version >= "3.6.2"
 msgpack-numpy==0.4.7.1
 msgpack-types==0.1.0; python_version >= "3.7" and python_version < "4.0"
 msgpack==1.0.2
+multidict==6.0.2; python_version >= "3.7"
 mypy-extensions==0.4.3; python_version >= "3.6" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.6.2"
 mypy==0.930; python_version >= "3.6"
 numpy==1.21.4; python_version >= "3.7" and python_version < "3.11"
@@ -66,6 +70,7 @@ pymysql==1.0.2; python_version >= "3.6"
 pyparsing==3.0.7; python_version >= "3.7"
 pytest-asyncio==0.17.2; python_version >= "3.7"
 pytest-cov==2.12.1; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
+pytest-subprocess==1.4.1; python_version >= "3.6"
 pytest==6.2.5; python_version >= "3.6"
 python-dateutil==2.8.2; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.3.0")
 python-magic==0.4.24; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.5.0")
@@ -76,7 +81,6 @@ quart-cors==0.5.0; python_full_version >= "3.7.0"
 quart==0.16.2; python_version >= "3.7"
 randomname==0.1.5
 regex==2022.1.18; python_full_version >= "3.6.2"
-requests==2.26.0; (python_version >= "2.7" and python_full_version < "3.0.0") or (python_full_version >= "3.6.0")
 setuptools-scm==6.4.2; python_version >= "3.7"
 six==1.16.0; python_full_version >= "3.7.1"
 sortedcontainers==2.4.0; python_version >= "3.6"
@@ -91,12 +95,12 @@ types-python-dateutil==2.8.3
 types-pytz==2021.3.4
 types-pyyaml==5.4.12
 types-requests==2.26.0
-typing-extensions==4.0.1; python_version >= "3.6" and python_full_version >= "3.6.2" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_version < "3.10" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
+typing-extensions==4.1.1; python_version >= "3.6" and python_full_version >= "3.6.2" and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_version < "3.10" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
 typing-inspect==0.7.1
-urllib3==1.26.8; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
 werkzeug==2.0.3; python_version >= "3.7" and python_full_version >= "3.7.0"
 wrapt==1.13.3; python_full_version >= "3.6.2"
 wsproto==1.0.0; python_full_version >= "3.6.1" and python_version >= "3.7"
 xarray==0.21.1; python_version >= "3.8"
 xdg==5.1.1; python_version >= "3.6" and python_version < "4.0"
+yarl==1.7.2; python_version >= "3.6"
 zipp==3.7.0; python_version < "3.9" and python_version >= "3.7"
