--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,11 +23,11 @@ xdg = '5.1.1'
 typed-argument-parser = '1.7.2'
 # For the config file
 pydantic = '1.8.2'
-# numpy for Karabo statistics
+# numpy for Karabo statistics, processing results
 numpy = { version = '1.21.4' }
 # for zmq access in the daemon
 pyzmq = '22.3.0'
-# for plotting
+# for processing results
 pandas = '1.3.4'
 # For validating units
 pint = '0.16.1'
