--- a/.pylintrc
+++ b/.pylintrc
@@ -69,6 +69,7 @@ disable=invalid-name,
     missing-function-docstring,
     line-too-long,
     missing-final-newline,
+    logging-not-lazy,
     broad-except,
     too-many-arguments,
     bad-whitespace,
