--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,6 +2,7 @@ aiofiles==0.8.0; python_version >= "3.7" and python_version < "4.0" and python_f
 aiohttp==3.8.1; python_version >= "3.6"
 aiosignal==1.2.0; python_version >= "3.6"
 aiosqlite==0.17.0; python_version >= "3.6"
+alembic==1.7.7; python_version >= "3.6"
 astroid==2.9.3; python_full_version >= "3.6.2"
 async-timeout==4.0.2; python_version >= "3.6"
 asyncmy==0.2.3; python_version >= "3.7" and python_version < "4.0"
@@ -21,7 +22,7 @@ extra-data==1.8.1; python_version >= "3.6"
 fire==0.4.0
 fonttools==4.30.0; python_version >= "3.7"
 frozenlist==1.3.0; python_version >= "3.7"
-greenlet==1.1.2; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.5.0"
+greenlet==1.1.2; python_version >= "3" and python_full_version < "3.0.0" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6") or python_version >= "3" and (platform_machine == "aarch64" or platform_machine == "ppc64le" or platform_machine == "x86_64" or platform_machine == "amd64" or platform_machine == "AMD64" or platform_machine == "win32" or platform_machine == "WIN32") and (python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0") and python_full_version >= "3.5.0" and (python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version >= "3.6")
 h11==0.13.0; python_full_version >= "3.7.0" and python_version >= "3.7"
 h2==4.1.0; python_full_version >= "3.6.1" and python_version >= "3.7"
 h5py==3.6.0; python_version >= "3.7"
@@ -30,6 +31,8 @@ hypercorn==0.13.2; python_version >= "3.7" and python_full_version >= "3.7.0"
 hyperframe==6.0.1; python_full_version >= "3.6.1" and python_version >= "3.7"
 hypothesis==6.27.1; python_version >= "3.6"
 idna==3.3; python_version >= "3.6"
+importlib-metadata==4.11.3; python_version < "3.9" and python_version >= "3.7"
+importlib-resources==5.4.0; python_version < "3.9" and python_version >= "3.6"
 iniconfig==1.1.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
 isodate==0.6.1
 isort==5.10.1; python_full_version >= "3.6.2" and python_version < "4.0"
@@ -38,6 +41,7 @@ jinja2==3.0.3; python_version >= "3.7" and python_full_version >= "3.7.0"
 karabo-bridge==0.6.1
 kiwisolver==1.3.2; python_version >= "3.7"
 lazy-object-proxy==1.7.1; python_version >= "3.6" and python_full_version >= "3.6.2"
+mako==1.2.0; python_version >= "3.7"
 markupsafe==2.1.0; python_version >= "3.7"
 matplotlib==3.5.1; python_version >= "3.7"
 mccabe==0.6.1; python_full_version >= "3.6.2"
@@ -97,3 +101,4 @@ wsproto==1.1.0; python_full_version >= "3.7.0" and python_version >= "3.7"
 xarray==2022.3.0; python_version >= "3.8"
 xdg==5.1.1; python_version >= "3.6" and python_version < "4.0"
 yarl==1.7.2; python_version >= "3.6"
+zipp==3.7.0; python_version < "3.9" and python_version >= "3.7"
